# Quectel-Cellular-Driver

./: CMakeLists.txt  README.md
COMPONENT_QUECTEL_EC2X/: QUECTEL_EC2X.cpp  QUECTEL_EC2X.h  mbed_lib.json
COMPONENT_QUECTEL_EG915/: CMakeLists.txt  QUECTEL_EG915.cpp  QUECTEL_EG915.h  mbed_lib.json
QUECTEL_EC2X/: CMakeLists.txt  QUECTEL_EC2X.cpp
QUECTEL_EG915/: QUECTEL_EG915.cpp
