# Copyright (c) 2024 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(QUECTEL_EC2X)
#add_subdirectory(COMPONENT_QUECTEL_BG96)
#add_subdirectory(COMPONENT_QUECTEL_UG96)
#add_subdirectory(COMPONENT_QUECTEL_BC95)
#add_subdirectory(COMPONENT_QUECTEL_M26)


